--- a/src/Services/Gaming/Gaming.API/Pages/Shared/_LoginPartial.cshtml
+++ b/src/Services/Gaming/Gaming.API/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using Gaming.API.Infrastructure.Data.FiveUsers.Models;
+@using Gaming.API.Infrastructure.Data.Community.Models;
 @inject SignInManager<FiveUser> SignInManager
 @inject UserManager<FiveUser> UserManager
 
@@ -30,7 +30,7 @@
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register" asp-route-returnUrl="@returnUrl">Register</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login"asp-route-returnUrl="@returnUrl">Login</a>
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login" asp-route-returnUrl="@returnUrl">Login</a>
         </li>
     }
 </ul>
